--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[a4paper]{article}
 \usepackage[polish]{babel}
 \usepackage[OT4]{fontenc}
 \usepackage[utf8]{inputenc}
